Changing files name
dnd (dungeon n dices) to snd (sheets n dices)

--- a/dnd-upgrade/index.html
+++ b/dnd-upgrade/index.html
@@ -50,10 +50,9 @@
             }
         </script>
 
-        <link rel="import" href="/src/dnd-app.html">
+        <link rel="import" href="/src/snd-app.html">
 
         <style>
-
             body {
                 -webkit-touch-callout: none;    /* prevent callout to copy image, etc when tap to hold */
                 -webkit-text-size-adjust: none; /* prevent webkit from resizing text to fit */
@@ -64,14 +63,13 @@
                 min-height: 100vh;
                 background-color: #eee;
             }
-
         </style>
 
     </head>
 
     <body>
 
-        <dnd-app unresolved></dnd-app>
+        <snd-app unresolved></snd-app>
 
     </body>
 </html>
