--- a/dnd-upgrade/src/snd-basesheet-data.html
+++ b/dnd-upgrade/src/snd-basesheet-data.html
@@ -1,7 +1,7 @@
 <link rel="import" href="../bower_components/polymer/polymer.html">
 <link rel="import" href="../bower_components/iron-localstorage/iron-localstorage.html">
 
-<dom-module id="dnd-basesheet-data">
+<dom-module id="snd-basesheet-data">
     <template>
 
 		<iron-localstorage name="DungeonNDicesBaseSheet"
@@ -14,7 +14,7 @@
 <script>
     Polymer({
 
-        is: "dnd-basesheet-data",
+        is: "snd-basesheet-data",
 
         properties: {
             baseSheet: {
