--- a/dnd-upgrade/src/snd-sheet-create.html
+++ b/dnd-upgrade/src/snd-sheet-create.html
@@ -13,7 +13,7 @@
 <link rel="import" href="create-defenses-tab.html">
 <link rel="import" href="create-skills-tab.html">
 
-<dom-module id="dnd-sheet-create">
+<dom-module id="snd-sheet-create">
 
     <template>
 
@@ -93,7 +93,7 @@
 
         Polymer({
 
-            is: 'dnd-sheet-create',
+            is: 'snd-sheet-create',
 
             properties: {
                 tabSelected: {
