--- a/dnd-upgrade/src/snd-sheet-detail.html
+++ b/dnd-upgrade/src/snd-sheet-detail.html
@@ -1,6 +1,6 @@
 <link rel="import" href="../bower_components/polymer/polymer.html">
 
-<dom-module id="dnd-sheet-detail">
+<dom-module id="snd-sheet-detail">
 
     <template>
 
@@ -105,7 +105,7 @@
 
         Polymer({
 
-            is: 'dnd-sheet-detail',
+            is: 'snd-sheet-detail',
 
             properties: {
                 sheetDetail: {
