--- a/dnd-upgrade/src/snd-sheet-list.html
+++ b/dnd-upgrade/src/snd-sheet-list.html
@@ -3,7 +3,7 @@
 <link rel="import" href="../bower_components/iron-icons/iron-icons.html">
 <link rel="import" href="../bower_components/paper-card/paper-card.html">
 
-<dom-module id="dnd-sheet-list">
+<dom-module id="snd-sheet-list">
 
     <template>
 
@@ -87,7 +87,7 @@
 
         Polymer({
 
-            is: 'dnd-sheet-list',
+            is: 'snd-sheet-list',
 
             properties: {
                 hasSheet: {
