--- a/dnd-upgrade/src/snd-sheetlist-data.html
+++ b/dnd-upgrade/src/snd-sheetlist-data.html
@@ -1,7 +1,7 @@
 <link rel="import" href="../bower_components/polymer/polymer.html">
 <link rel="import" href="../bower_components/iron-localstorage/iron-localstorage.html">
 
-<dom-module id="dnd-sheetlist-data">
+<dom-module id="snd-sheetlist-data">
     <template>
 
 		<iron-localstorage name="DungeonNDicesSheetList"
@@ -14,7 +14,7 @@
 <script>
     Polymer({
 
-        is: "dnd-sheetlist-data",
+        is: "snd-sheetlist-data",
 
         properties: {
             sheetList: {
