Changing LocalStorage Name

--- a/dnd-upgrade/src/snd-newsheet-data.html
+++ b/dnd-upgrade/src/snd-newsheet-data.html
@@ -4,7 +4,7 @@
 <dom-module id="snd-newsheet-data">
     <template>
 
-		<iron-localstorage name="DungeonNDicesNewSheet"
+		<iron-localstorage name="SheetsNDicesNewSheet"
                            value="{{ newSheet }}"
                            on-iron-localstorage-load-empty="_initializeNewSheet"></iron-localstorage>
 
