--- a/dnd-upgrade/src/snd-sheetlist-data.html
+++ b/dnd-upgrade/src/snd-sheetlist-data.html
@@ -4,7 +4,7 @@
 <dom-module id="snd-sheetlist-data">
     <template>
 
-		<iron-localstorage name="DungeonNDicesSheetList"
+		<iron-localstorage name="SheetsNDicesSheetList"
                            value="{{ sheetList }}"
                            on-iron-localstorage-load-empty="_initializeSheetList"></iron-localstorage>
 
