--- a/dnd-upgrade/src/snd-basesheet-data.html
+++ b/dnd-upgrade/src/snd-basesheet-data.html
@@ -4,7 +4,7 @@
 <dom-module id="snd-basesheet-data">
     <template>
 
-		<iron-localstorage name="DungeonNDicesBaseSheet"
+		<iron-localstorage name="SheetsNDicesBaseSheet"
                            value="{{ baseSheet }}"
                            on-iron-localstorage-load-empty="_initializeBaseSheet"></iron-localstorage>
 
