Update Code and Start SheetDetail
Changed ' to "

--- a/dnd-upgrade/src/create-skills-tab.html
+++ b/dnd-upgrade/src/create-skills-tab.html
@@ -56,7 +56,7 @@
         },
 
         listeners: {
-            'requestDeleteCard': '_deleteSkills'
+            "requestDeleteCard": "_deleteSkills"
         },
 
         _newSkills: function(e){
@@ -73,7 +73,7 @@
         },
 
         _deleteSkills: function(e){
-            this.splice('skillsList', e.detail.index, 1);
+            this.splice("skillsList", e.detail.index, 1);
         }
 
     });
