--- a/dnd-upgrade/src/create-status-card.html
+++ b/dnd-upgrade/src/create-status-card.html
@@ -72,7 +72,7 @@
         },
 
         _requestDeleteStatus: function(e){
-            this.fire('requestDeleteStatus', {
+            this.fire("requestDeleteStatus", {
                 index: this.index
             });
         }
