--- a/dnd-upgrade/src/create-status-tab.html
+++ b/dnd-upgrade/src/create-status-tab.html
@@ -52,7 +52,7 @@
         },
 
         listeners: {
-            'requestDeleteStatus': '_deleteStatus'
+            "requestDeleteStatus": "_deleteStatus"
         },
 
         _newStatus: function(e){
@@ -67,7 +67,7 @@
         },
 
         _deleteStatus: function(e){
-            this.splice('statusList', e.detail.index, 1);
+            this.splice("statusList", e.detail.index, 1);
         }
 
     });
