--- a/dnd-upgrade/src/create-statusbased-card.html
+++ b/dnd-upgrade/src/create-statusbased-card.html
@@ -109,7 +109,7 @@
         },
 
         _requestDeleteCard: function(e){
-            this.fire('requestDeleteCard', {
+            this.fire("requestDeleteCard", {
                 index: this.index
             });
         }
