--- a/dnd-upgrade/src/snd-newsheet-data.html
+++ b/dnd-upgrade/src/snd-newsheet-data.html
@@ -25,10 +25,10 @@
         },
 
         _initializeNewSheet: function(e){
-            if((typeof this.newSheet == 'undefined' || this.newSheet == null) && this.baseSheet != null){
+            if((typeof this.newSheet == "undefined" || this.newSheet == null) && this.baseSheet != null){
                 //this.newSheet = Object.create(this.baseSheet);
                 this.newSheet = Object.assign({}, this.baseSheet);
-                console.log('Creating Sheet Assigned as Base Sheet');
+                console.log("Creating Sheet Assigned as Base Sheet");
             }
         }
 
