--- a/dnd-upgrade/src/snd-sheet-list.html
+++ b/dnd-upgrade/src/snd-sheet-list.html
@@ -3,6 +3,8 @@
 <link rel="import" href="../bower_components/iron-icons/iron-icons.html">
 <link rel="import" href="../bower_components/paper-card/paper-card.html">
 
+<link rel="import" href="list-sheet-card.html">
+
 <dom-module id="snd-sheet-list">
 
     <template>
@@ -12,10 +14,6 @@
                 display: block;
                 @apply(--layout-vertical);
                 padding: 16px;
-            }
-
-            paper-card {
-                margin-bottom: 16px;
             }
 
             h2 {
@@ -28,13 +26,6 @@
                 right: 16px;
             }
 
-            .card-content-row {
-                 @apply(--layout-horizontal);
-                 @apply(--layout-justified);
-                 margin-top: -16px;
-                 margin-bottom: -16px;
-            }
-
             .emptyList {
                 @apply(--layout-vertical);
                 @apply(--layout-center);
@@ -44,27 +35,12 @@
         <template is="dom-repeat"
                   items="{{ sheetList.list }}">
 
-            <paper-card>
-                <div class="card-content">
-
-                    <div class="card-content-row">
-                        <p>Personagem:</p><p>{{ item.name }}</p>
-                    </div>
-                    <div class="card-content-row">
-                        <p>Level:</p><p>{{ item.level }}</p>
-                    </div>
-                    <div class="card-content-row">
-                        <p>Classe:</p><p>{{ item.job }}</p>
-                    </div>
-                    <div class="card-content-row">
-                        <p>Raça:</p><p>{{ item.race }}</p>
-                    </div>
-                    <div class="card-content-row">
-                        <p>Sistema:</p><p>{{ item.system }}</p>
-                    </div>
-
-                </div>
-            </paper-card>
+            <list-sheet-card index="{{ index }}"
+                             name="{{ item.name }}"
+                             level="{{ item.level }}"
+                             job="{{ item.job }}"
+                             race="{{ item.race }}"
+                             system="{{ item.system }}"></list-sheet-card>
 
         </template>
 
@@ -87,7 +63,7 @@
 
         Polymer({
 
-            is: 'snd-sheet-list',
+            is: "snd-sheet-list",
 
             properties: {
                 hasSheet: {
@@ -97,12 +73,20 @@
                 sheetList: {
                     type: Object,
                     notify: true
+                },
+                sheetDetail: {
+                    type: Object,
+                    notify: true
                 }
             },
 
             observers: [
                 "_sheetListUpdate(sheetList.*)"
             ],
+
+            listeners: {
+                "requestDetail": "_requestDetail"
+            },
 
             attached: function(e){
                 Polymer.updateStyles();
@@ -114,6 +98,13 @@
                 } else{
                     this.hasSheet = true;
                 }
+            },
+
+            _requestDetail: function(e){
+                this.set("sheetDetail", this.sheetList.list[e.detail.index]);
+                this.fire("requestChangeRoute", {
+                    route: "/detail"
+                });
             }
 
         });
