--- a/dnd-upgrade/src/create-defenses-tab.html
+++ b/dnd-upgrade/src/create-defenses-tab.html
@@ -56,7 +56,7 @@
         },
 
         listeners: {
-            'requestDeleteCard': '_deleteDefenses'
+            "requestDeleteCard": "_deleteDefenses"
         },
 
         _newDefenses: function(e){
@@ -73,7 +73,7 @@
         },
 
         _deleteDefenses: function(e){
-            this.splice('defensesList', e.detail.index, 1);
+            this.splice("defensesList", e.detail.index, 1);
         }
 
     });
