--- a/dnd-upgrade/src/create-resources-tab.html
+++ b/dnd-upgrade/src/create-resources-tab.html
@@ -56,7 +56,7 @@
         },
 
         listeners: {
-            'requestDeleteCard': '_deleteResources'
+            "requestDeleteCard": "_deleteResources"
         },
 
         _newResources: function(e){
@@ -73,7 +73,7 @@
         },
 
         _deleteResources: function(e){
-            this.splice('resourcesList', e.detail.index, 1);
+            this.splice("resourcesList", e.detail.index, 1);
         }
 
     });
