--- a/dnd-upgrade/src/snd-sheet-detail.html
+++ b/dnd-upgrade/src/snd-sheet-detail.html
@@ -7,6 +7,7 @@
         <style>
             :host {
                 display: block;
+                @apply(--layout-vertical);
                 padding: 16px;
             }
 
@@ -105,7 +106,7 @@
 
         Polymer({
 
-            is: 'snd-sheet-detail',
+            is: "snd-sheet-detail",
 
             properties: {
                 sheetDetail: {
