--- a/dnd-upgrade/src/snd-sheet-create.html
+++ b/dnd-upgrade/src/snd-sheet-create.html
@@ -101,6 +101,9 @@
                     value: "0",
                     notify: true
                 },
+                dialogOpen: {
+                    type: Boolean
+                },
                 newSheet: {
                     type: Object,
                     notify: true
